<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@color/home_page_red">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/modify_address"
            android:textColor="@color/ghost_white"
            android:textSize="20dp"
            android:layout_centerInParent="true"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:text="@string/save_address"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:gravity="center"/>
    </RelativeLayout>

    <!--收货人姓名-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consignee_name"/>
        <EditText
            android:id="@+id/et_consignee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_gray_shape"
            android:hint="@string/consignee_name_tip"/>
    </LinearLayout>

    <!--邮政编码-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_code_long"/>
        <EditText
            android:id="@+id/et_post_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_gray_shape"
            android:hint="@string/post_code_long_tip"/>
    </LinearLayout>

    <!--电话号码-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_num"/>
        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_gray_shape"
            android:hint="@string/phone_num_tip"/>
    </LinearLayout>

    <!--手机号码-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cell_phone_num"/>
        <EditText
            android:id="@+id/et_cell_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_gray_shape"
            android:hint="@string/cell_phone_num_tip"/>
    </LinearLayout>

    <!--地区-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"/>
        <Spinner
            android:id="@+id/sp_province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_province"
            android:background="@drawable/rectangle_gray_shape"/>

        <Spinner
            android:id="@+id/sp_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_city"
            android:background="@drawable/rectangle_gray_shape"/>

        <Spinner
            android:id="@+id/sp_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_area"
            android:background="@drawable/rectangle_gray_shape"/>
    </LinearLayout>

</LinearLayout>
