<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@color/home_page_red">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/cell_phone"
            android:textColor="@color/ghost_white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/ghost_white"
            android:textSize="20dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:gravity="center"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_send_msg_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="15dp"
        android:text="@string/cell_phone_notice"
        android:textSize="17dp"/>

    <LinearLayout
        android:id="@+id/layout_middle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/layout_top"
        android:gravity="center">

        <EditText
            android:id="@+id/et_verification"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rectangle_gray_shape"
            android:hint="@string/verification_code_tip"
            android:textColor="@color/dim_gray"
            android:textColorHint="@color/gainsborough"
            android:textSize="18dp"/>

        <Button
            android:id="@+id/btn_get_verification"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/et_verification"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/get_verification"
            android:textColor="@color/ghost_white" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/rectangle_gray_shape"
        android:hint="@string/cell_phone_num_tip"
        android:textColor="@color/dim_gray"
        android:textColorHint="@color/gainsborough"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/cell_phone_tip_notice"
        android:textColor="@color/orange" />

</LinearLayout>