<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:txttxtBtnView="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@color/home_page_red">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/select_logistics"
            android:textColor="@color/ghost_white"
            android:textSize="20dp"
            android:layout_centerInParent="true"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_send_out"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/send_out"
            android:layout_marginRight="17dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/ghost_white"
            android:textSize="20dp"
            android:gravity="center"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_middle"
        android:layout_below="@id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/logistics_company"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle_gray_shape">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/logistics_company_tip"
                android:textColorHint="@color/gainsborough"
                android:background="@null"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/arrow_bottom"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/layout_middle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp">
        <TextView
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/freight_note_number"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:background="@drawable/rectangle_gray_shape"
            android:hint="@string/freight_note_number_tip"
            android:textColorHint="@color/gainsborough"/>
    </LinearLayout>


</RelativeLayout>
